--- a/local.properties
+++ b/local.properties
@@ -8,4 +8,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Nov 19 21:52:33 NZDT 2016
-sdk.dir=C\:\\Users\\boswelja\\AppData\\Local\\Android\\sdk
+sdk.dir=$(ANDROID_HOME)
