Remove useless crap * Removed unused classes * Removed genres and mood (they didn't work properly * Fixed some warnings/deprecation issues * Clean up strings a little

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:theme="@style/AppTheme.Main" />
         <activity
             android:name=".ui.layouts.activity.settings.Settings"
-            android:label="@string/settings"
+            android:label="@string/action_settings"
             android:theme="@style/AppTheme.Pref" />
         <activity
             android:name=".ui.layouts.activity.settings.ThemeSettings"
