--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.annimon:paperstyle:1.1.0'
     compile 'com.makeramen:dragsortadapter:1.3.0'
+    compile 'com.afollestad.material-dialogs:core:0.9.1.0'
+
 }
