--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.architjn.acjmusicplayer">
+    package="com.dominionos.music">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -16,49 +16,53 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light">
         <activity
-            android:name=".ui.layouts.activity.MainActivity"
+            android:name=".ui.layouts.activity.SplashActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.Main">
+            android:theme="@style/AppTheme.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.layouts.activity.AlbumActivity"
+            android:name="com.dominionos.music.ui.layouts.activity.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.Main" />
+        <activity
+            android:name="com.dominionos.music.ui.layouts.activity.AlbumActivity"
             android:label="Album"
             android:theme="@style/AppTheme.Album" />
         <activity
-            android:name=".ui.layouts.activity.MusicPlayer"
+            android:name="com.dominionos.music.ui.layouts.activity.MusicPlayer"
             android:label=""
             android:theme="@style/AppTheme.Player" />
         <activity
-            android:name=".ui.layouts.activity.PlaylistActivity"
+            android:name="com.dominionos.music.ui.layouts.activity.PlaylistActivity"
             android:label=""
             android:theme="@style/AppTheme.Main" />
         <activity
-            android:name=".ui.layouts.activity.settings.Settings"
+            android:name="com.dominionos.music.ui.layouts.activity.settings.Settings"
             android:label="@string/action_settings"
             android:theme="@style/AppTheme.Pref" />
         <activity
-            android:name=".ui.layouts.activity.settings.ThemeSettings"
+            android:name="com.dominionos.music.ui.layouts.activity.settings.ThemeSettings"
             android:label="@string/pref_theme"
             android:theme="@style/AppTheme.Pref" />
         <activity
-            android:name=".ui.layouts.activity.settings.HomeScreenSettings"
+            android:name="com.dominionos.music.ui.layouts.activity.settings.HomeScreenSettings"
             android:label="@string/pref_home_view"
             android:theme="@style/AppTheme.Pref" />
         <activity
-            android:name=".ui.layouts.activity.settings.PlayerScreenSettings"
+            android:name="com.dominionos.music.ui.layouts.activity.settings.PlayerScreenSettings"
             android:label="@string/pref_player_view"
             android:theme="@style/AppTheme.Pref" />
         <activity
-            android:name=".ui.layouts.activity.settings.AlbumScreenSettings"
+            android:name="com.dominionos.music.ui.layouts.activity.settings.AlbumScreenSettings"
             android:label="@string/pref_album_view"
             android:theme="@style/AppTheme.Pref" />
 
         <service
-            android:name=".service.MusicService"
+            android:name="com.dominionos.music.service.MusicService"
             android:enabled="true" />
     </application>
 
