--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,9 @@ android {
 }
 
 dependencies {
+    repositories {
+        mavenCentral()
+    }
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:cardview-v7:25.0.1'
@@ -30,5 +33,6 @@ dependencies {
     compile 'com.annimon:paperstyle:1.1.0'
     compile 'com.makeramen:dragsortadapter:1.3.0'
     compile 'com.afollestad.material-dialogs:core:0.9.1.0'
-
+    compile 'com.sothree.slidinguppanel:library:3.3.1'
+    compile 'com.android.support:support-v4:25.0.1'
 }
