--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,7 @@ dependencies {
     compile 'com.makeramen:dragsortadapter:1.3.0'
     compile 'com.afollestad.material-dialogs:core:0.9.1.0'
     compile 'com.android.support:support-v4:25.0.1'
+    compile('com.mikepenz:materialdrawer:5.8.0@aar') {
+        transitive = true
+    }
 }
