--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     compile('com.mikepenz:materialdrawer:5.8.0@aar') {
         transitive = true
     }
+    compile('com.mikepenz:aboutlibraries:5.9.0@aar') {
+        transitive = true
+    }
 }
