--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,6 @@ dependencies {
     compile 'com.android.support:design:25.0.1'
     compile 'com.android.support:palette-v7:25.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.annimon:paperstyle:1.1.0'
     compile 'com.makeramen:dragsortadapter:1.3.0'
     compile 'com.afollestad.material-dialogs:core:0.9.1.0'
     compile 'com.android.support:support-v4:25.0.1'
@@ -40,4 +39,5 @@ dependencies {
     compile('com.mikepenz:aboutlibraries:5.9.0@aar') {
         transitive = true
     }
+    compile 'com.minimize.library:seekbar-compat:0.2.5'
 }
