--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,14 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light">
         <activity
-            android:name=".ui.layouts.activity.SplashActivity"
+            android:name="com.dominionos.music.ui.layouts.activity.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.Splash">
+            android:theme="@style/AppTheme.Main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.dominionos.music.ui.layouts.activity.MainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.Main" />
         <activity
             android:name="com.dominionos.music.ui.layouts.activity.AlbumActivity"
             android:theme="@style/AppTheme.Album" />
