--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
         <activity
             android:name="com.dominionos.music.ui.layouts.activity.PlaylistActivity"
             android:theme="@style/AppTheme.Main" />
+        <activity
+            android:name=".ui.layouts.activity.ArtistActivity"
+            android:theme="@style/AppTheme.Main" />
 
         <service
             android:name="com.dominionos.music.service.MusicService"
