New Search activity! * Searches by name and artist * Apparently almost instantly * Increment version * Resolves #7

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,26 +14,31 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.AppCompat.Light">
         <activity
-            android:name="com.dominionos.music.ui.layouts.activity.MainActivity"
+            android:name=".ui.layouts.activity.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.BrandedLaunch" >
+            android:theme="@style/AppTheme.BrandedLaunch">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="com.dominionos.music.ui.layouts.activity.AlbumActivity"
+            android:name=".ui.layouts.activity.SearchActivity"
+            android:label="Search"
+            android:theme="@style/AppTheme.Search"/>
+        <activity
+            android:name=".ui.layouts.activity.AlbumActivity"
             android:theme="@style/AppTheme.Main" />
         <activity
-            android:name="com.dominionos.music.ui.layouts.activity.MusicPlayer"
+            android:name=".ui.layouts.activity.MusicPlayer"
             android:theme="@style/AppTheme.Main" />
         <activity
-            android:name="com.dominionos.music.ui.layouts.activity.PlaylistActivity"
+            android:name=".ui.layouts.activity.PlaylistActivity"
             android:theme="@style/AppTheme.Main" />
 
         <service
-            android:name="com.dominionos.music.service.MusicService"
+            android:name=".service.MusicService"
             android:enabled="true" />
     </application>
 
