--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.dominionos.music"
         minSdkVersion 21
         targetSdkVersion 25
-        versionCode 6
-        versionName "1.4 beta"
+        versionCode 7
+        versionName "1.5 beta"
     }
     buildTypes {
         release {
@@ -22,8 +22,15 @@ android {
 dependencies {
     repositories {
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile('com.mikepenz:materialdrawer:5.8.0@aar') {
+        transitive = true
+    }
+    compile('com.mikepenz:aboutlibraries:5.9.0@aar') {
+        transitive = true
+    }
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:cardview-v7:25.0.1'
     compile 'com.android.support:recyclerview-v7:25.0.1'
@@ -32,12 +39,6 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.afollestad.material-dialogs:core:0.9.1.0'
     compile 'com.android.support:support-v4:25.0.1'
-    compile('com.mikepenz:materialdrawer:5.8.0@aar') {
-        transitive = true
-    }
-    compile('com.mikepenz:aboutlibraries:5.9.0@aar') {
-        transitive = true
-    }
     compile 'com.minimize.library:seekbar-compat:0.2.5'
     compile 'com.afollestad:async:0.2.3'
     compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
