Basic launcher shortcuts * Only works on android 7.1.X or android 5.1.X + devices with Nova or Action launcher * Quickly access search

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,14 +19,21 @@
             android:theme="@style/AppTheme.BrandedLaunch">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <meta-data android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts" />
         </activity>
         <activity
             android:name=".ui.layouts.activity.SearchActivity"
             android:label="Search"
-            android:theme="@style/AppTheme.Search"/>
+            android:theme="@style/AppTheme.Search">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+            </intent-filter>
+            <meta-data android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts" />
+        </activity>
         <activity
             android:name=".ui.layouts.activity.AlbumActivity"
             android:theme="@style/AppTheme.Main" />
