--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,6 +43,9 @@
         <activity
             android:name=".ui.layouts.activity.PlaylistActivity"
             android:theme="@style/AppTheme.Main" />
+        <activity
+            android:name=".ui.layouts.activity.ArtistActivity"
+            android:theme="@style/AppTheme.Main" />
 
         <service
             android:name=".service.MusicService"
