--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,7 @@ android {
 }
 
 dependencies {
+    compile group: 'cz.msebera.android' , name: 'httpclient', version: '4.4.1.1'
     repositories {
         mavenCentral()
         maven { url 'https://jitpack.io' }
@@ -44,7 +45,6 @@ dependencies {
     compile 'com.android.support:support-v4:25.1.0'
     compile 'com.minimize.library:seekbar-compat:0.2.5'
     compile 'com.afollestad:async:0.2.3'
-    compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
     compile 'com.makeramen:roundedimageview:2.2.1'
     compile 'com.simplecityapps:recyclerview-fastscroll:1.0.11'
     compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
