--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile 'com.simplecityapps:recyclerview-fastscroll:1.0.11'
     compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
     compile 'com.google.firebase:firebase-crash:10.0.1'
+    compile 'com.sothree.slidinguppanel:library:3.3.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
