--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,8 +13,9 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            shrinkResources true
+            minifyEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
     lintOptions {
@@ -23,16 +24,16 @@ android {
 }
 
 dependencies {
-    compile group: 'cz.msebera.android', name: 'httpclient', version: '4.4.1.1'
     repositories {
         mavenCentral()
         maven { url 'https://jitpack.io' }
+        jcenter()
     }
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile('com.mikepenz:materialdrawer:5.8.0@aar') {
+    compile('com.mikepenz:materialdrawer:5.8.1@aar') {
         transitive = true
     }
-    compile('com.mikepenz:aboutlibraries:5.9.0@aar') {
+    compile('com.mikepenz:aboutlibraries:5.9.1@aar') {
         transitive = true
     }
     compile 'com.android.support:appcompat-v7:25.1.1'
@@ -49,6 +50,8 @@ dependencies {
     compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
     compile 'com.google.firebase:firebase-crash:10.0.1'
     compile 'com.sothree.slidinguppanel:library:3.3.1'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'uk.co.samuelwall:material-tap-target-prompt:1.8.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
