--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,17 +41,16 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.android.support:palette-v7:25.1.1'
-    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.afollestad.material-dialogs:core:0.9.1.0'
     compile 'com.android.support:support-v4:25.1.1'
     compile 'com.afollestad:async:0.2.3'
-    compile 'com.makeramen:roundedimageview:2.2.1'
     compile 'com.simplecityapps:recyclerview-fastscroll:1.0.11'
     compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
     compile 'com.google.firebase:firebase-crash:10.0.1'
     compile 'com.sothree.slidinguppanel:library:3.3.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'uk.co.samuelwall:material-tap-target-prompt:1.8.3'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
