--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.dominionos.music"
         minSdkVersion 21
         targetSdkVersion 25
-        versionCode 11
-        versionName "2.1"
+        versionCode 12
+        versionName "2.2"
     }
     buildTypes {
         release {
@@ -28,6 +28,9 @@ dependencies {
         mavenCentral()
         maven { url 'https://jitpack.io' }
         jcenter()
+        flatDir {
+            dirs 'libs'
+        }
     }
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile('com.mikepenz:materialdrawer:5.8.1@aar') {
@@ -36,21 +39,20 @@ dependencies {
     compile('com.mikepenz:aboutlibraries:5.9.1@aar') {
         transitive = true
     }
-    compile 'com.android.support:appcompat-v7:25.1.1'
-    compile 'com.android.support:cardview-v7:25.1.1'
-    compile 'com.android.support:recyclerview-v7:25.1.1'
-    compile 'com.android.support:design:25.1.1'
-    compile 'com.android.support:palette-v7:25.1.1'
+    compile 'com.android.support:appcompat-v7:25.2.0'
+    compile 'com.android.support:cardview-v7:25.2.0'
+    compile 'com.android.support:recyclerview-v7:25.2.0'
+    compile 'com.android.support:design:25.2.0'
+    compile 'com.android.support:palette-v7:25.2.0'
     compile 'com.afollestad.material-dialogs:core:0.9.1.0'
-    compile 'com.android.support:support-v4:25.1.1'
+    compile 'com.android.support:support-v4:25.2.0'
     compile 'com.afollestad:async:0.2.3'
     compile 'com.simplecityapps:recyclerview-fastscroll:1.0.11'
     compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
-    compile 'com.google.firebase:firebase-crash:10.0.1'
     compile 'com.sothree.slidinguppanel:library:3.3.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'uk.co.samuelwall:material-tap-target-prompt:1.8.3'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.lapism:searchview:4.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
