EXPERIMENTAL dark theme

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,7 @@
             android:name=".service.MusicService"
             android:enabled="true" />
 
+        <activity android:name=".ui.layouts.activity.SettingsActivity"/>
     </application>
 
 </manifest>
