--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     compile 'com.android.support:design:25.2.0'
     compile 'com.android.support:palette-v7:25.2.0'
     compile 'com.afollestad.material-dialogs:core:0.9.1.0'
-    compile 'com.android.support:support-v4:25.2.0'
+    compile 'com.android.support:support-v13:25.2.0'
     compile 'com.afollestad:async:0.2.3'
     compile 'com.simplecityapps:recyclerview-fastscroll:1.0.11'
     compile 'com.mikepenz:google-material-typeface:2.2.0.3.original@aar'
@@ -56,5 +56,6 @@ dependencies {
     compile 'com.android.support:preference-v7:25.2.0'
     compile 'com.android.support:preference-v14:25.2.0'
     compile 'com.google.firebase:firebase-core:10.2.0'
+    compile 'com.google.firebase:firebase-crash:10.2.0'
 }
 apply plugin: 'com.google.gms.google-services'
