--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.dominionos.music">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -14,7 +15,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:fullBackupContent="@xml/backup"
-        android:theme="@style/Theme.AppCompat.Light">
+        android:theme="@style/Theme.AppCompat.Light"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".ui.layouts.activity.MainActivity"
             android:label="@string/app_name"
