--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,8 @@ dependencies {
     compile 'com.android.support:preference-v14:25.2.0'
     compile 'com.google.firebase:firebase-core:10.2.0'
     compile 'com.google.firebase:firebase-crash:10.2.0'
+
+    compile 'com.jakewharton:butterknife:8.5.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
 apply plugin: 'com.google.gms.google-services'
