--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
             android:name="com.google.android.backup.api_key"
             android:value="AEdPqrEAAAAIw2E_fM-yn0bvtnL5a0e2xDfJ8Z8pG82ow1UD4A" />
         <activity
-            android:name=".ui.layouts.activity.MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.BrandedLaunch">
             <intent-filter>
@@ -32,7 +32,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.layouts.activity.SearchActivity"
+            android:name=".ui.activity.SearchActivity"
             android:label="Search"
             android:theme="@style/AppTheme.Search">
             <intent-filter>
@@ -40,20 +40,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.layouts.activity.AlbumActivity"
+            android:name=".ui.activity.AlbumActivity"
             android:theme="@style/AppTheme.Main" />
         <activity
-            android:name=".ui.layouts.activity.PlaylistActivity"
+            android:name=".ui.activity.PlaylistActivity"
             android:theme="@style/AppTheme.Main" />
         <activity
-            android:name=".ui.layouts.activity.ArtistActivity"
+            android:name=".ui.activity.ArtistActivity"
             android:theme="@style/AppTheme.Main" />
 
         <service
             android:name=".service.MusicService"
             android:enabled="true" />
 
-        <activity android:name=".ui.layouts.activity.SettingsActivity"/>
+        <activity android:name=".ui.activity.SettingsActivity"/>
     </application>
 
 </manifest>
