--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.dominionos.music">
+    package="com.mnmlos.music">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -21,7 +21,7 @@
             android:name="com.google.android.backup.api_key"
             android:value="AEdPqrEAAAAIw2E_fM-yn0bvtnL5a0e2xDfJ8Z8pG82ow1UD4A" />
         <activity
-            android:name=".ui.activity.MainActivity"
+            android:name="com.mnmlos.music.ui.activity.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.BrandedLaunch">
             <intent-filter>
@@ -33,7 +33,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.SearchActivity"
+            android:name="com.mnmlos.music.ui.activity.SearchActivity"
             android:label="Search"
             android:theme="@style/AppTheme.Search">
             <intent-filter>
@@ -41,20 +41,20 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.AlbumActivity"
+            android:name="com.mnmlos.music.ui.activity.AlbumActivity"
             android:theme="@style/AppTheme.Main" />
         <activity
-            android:name=".ui.activity.PlaylistActivity"
+            android:name="com.mnmlos.music.ui.activity.PlaylistActivity"
             android:theme="@style/AppTheme.Main" />
         <activity
-            android:name=".ui.activity.ArtistActivity"
+            android:name="com.mnmlos.music.ui.activity.ArtistActivity"
             android:theme="@style/AppTheme.Main" />
 
         <service
-            android:name=".service.MusicService"
+            android:name="com.mnmlos.music.service.MusicService"
             android:enabled="true" />
 
-        <activity android:name=".ui.activity.SettingsActivity"/>
+        <activity android:name="com.mnmlos.music.ui.activity.SettingsActivity"/>
     </application>
 
 </manifest>
