--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,10 +6,10 @@ android {
 
     defaultConfig {
         applicationId "com.mnmlos.music"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 25
-        versionCode 16
-        versionName "2.3.3"
+        versionCode 17
+        versionName "2.3.4"
     }
     buildTypes {
         release {
@@ -54,6 +54,8 @@ dependencies {
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.android.support:support-v4:25.3.0'
     compile 'com.android.support:percent:25.3.0'
+    compile 'com.afollestad.material-dialogs:commons:0.9.4.2'
+
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
 apply plugin: 'com.google.gms.google-services'
