--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        applicationId "com.mnmlos.music"
+        applicationId "com.dominionos.music"
         minSdkVersion 23
         targetSdkVersion 25
         versionCode 17
