--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     compile 'com.android.support:support-v4:25.3.0'
     compile 'com.android.support:percent:25.3.0'
     compile 'com.afollestad.material-dialogs:commons:0.9.4.2'
+    compile ('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.10.5@aar'){
+        transitive=true
+    }
 
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
