--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,10 @@ android {
         versionCode 22
         versionName "2.4.0"
     }
+    configurations {
+        all*.exclude group: 'com.google.firebase', module: 'firebase-core'
+        all*.exclude group: 'com.google.firebase', module: 'firebase-iid'
+    }
     buildTypes {
         release {
             shrinkResources true
@@ -45,11 +49,8 @@ dependencies {
     compile 'com.sothree.slidinguppanel:library:3.3.1'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.lapism:searchview:4.0'
-    compile 'com.google.firebase:firebase-core:10.2.0'
-    compile 'com.google.firebase:firebase-crash:10.2.0'
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.afollestad.material-dialogs:core:0.9.4.2'
-    compile 'com.afollestad.material-dialogs:commons:0.9.4.2'
     compile ('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.10.5@aar'){
         transitive=true
     }
@@ -62,4 +63,3 @@ dependencies {
 
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
-apply plugin: 'com.google.gms.google-services'
