--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,13 +16,17 @@
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup"
         android:theme="@style/Theme.AppCompat.Light"
+        android:roundIcon="@mipmap/ic_launcher"
         tools:ignore="GoogleAppIndexingWarning">
         <meta-data
             android:name="com.google.android.backup.api_key"
             android:value="AEdPqrEAAAAIw2E_fM-yn0bvtnL5a0e2xDfJ8Z8pG82ow1UD4A" />
+        <meta-data android:name="android.max_aspect" android:value="2.1" />
+
         <activity
             android:name="com.dominionos.music.ui.activity.MainActivity"
             android:label="@string/app_name"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/AppTheme.BrandedLaunch">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,6 +39,7 @@
         <activity
             android:name="com.dominionos.music.ui.activity.SearchActivity"
             android:label="Search"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/AppTheme.Search">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,19 +47,25 @@
         </activity>
         <activity
             android:name="com.dominionos.music.ui.activity.AlbumActivity"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/AppTheme.Main" />
         <activity
             android:name="com.dominionos.music.ui.activity.PlaylistActivity"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/AppTheme.Main" />
         <activity
             android:name="com.dominionos.music.ui.activity.ArtistActivity"
+            android:screenOrientation="sensorPortrait"
             android:theme="@style/AppTheme.Main" />
 
         <service
             android:name="com.dominionos.music.service.MusicService"
             android:enabled="true" />
 
-        <activity android:name="com.dominionos.music.ui.activity.SettingsActivity"/>
+        <activity
+            android:name="com.dominionos.music.ui.activity.SettingsActivity"
+            android:screenOrientation="sensorPortrait"
+            android:label="@string/settings"/>
     </application>
 
 </manifest>
