--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '25.0.2'
 
     defaultConfig {
         applicationId "com.dominionos.music"
@@ -34,8 +34,7 @@ dependencies {
         maven { url 'https://jitpack.io' }
         jcenter()
     }
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
@@ -46,7 +45,6 @@ dependencies {
     compile 'com.android.support:percent:25.3.1'
     compile 'com.android.support:preference-v7:25.3.1'
     compile 'com.android.support:preference-v14:25.3.1'
-
     compile 'com.afollestad:async:0.2.3'
     compile 'com.simplecityapps:recyclerview-fastscroll:1.0.14'
     compile 'com.mikepenz:material-design-iconic-typeface:2.2.0.2@aar'
@@ -55,8 +53,8 @@ dependencies {
     compile 'com.lapism:searchview:4.0'
     compile 'com.jakewharton:butterknife:8.5.1'
     compile 'com.afollestad.material-dialogs:core:0.9.4.2'
-    compile ('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.10.5@aar'){
-        transitive=true
+    compile('com.h6ah4i.android.widget.advrecyclerview:advrecyclerview:0.10.5@aar') {
+        transitive = true
     }
     compile('com.mikepenz:materialdrawer:5.8.2@aar') {
         transitive = true
@@ -64,6 +62,8 @@ dependencies {
     compile('com.mikepenz:aboutlibraries:5.9.1@aar') {
         transitive = true
     }
-
+    compile ('com.github.kabouzeid:app-theme-helper:1.3.5@aar') {
+        transitive = true
+    }
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 }
