--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             android:name="com.dominionos.music.ui.activity.SearchActivity"
             android:label="Search"
             android:screenOrientation="sensorPortrait"
-            android:theme="@style/AppTheme.Search">
+            android:theme="@style/AppTheme.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
