--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "com.dominionos.music"
-        minSdkVersion 21
+        minSdkVersion 24
         targetSdkVersion 25
         versionCode 22
         versionName "2.4.0"
@@ -25,6 +25,10 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    dexOptions {
+        preDexLibraries = false
+        javaMaxHeapSize "2g"
     }
 }
 
