--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,21 +10,23 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:supportsRtl="true"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup"
-        android:theme="@style/Theme.AppCompat.Light"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
+        android:supportsRtl="true"
+        android:theme="@style/Theme.AppCompat.Light"
         tools:ignore="GoogleAppIndexingWarning">
         <meta-data
             android:name="com.google.android.backup.api_key"
             android:value="AEdPqrEAAAAIw2E_fM-yn0bvtnL5a0e2xDfJ8Z8pG82ow1UD4A" />
-        <meta-data android:name="android.max_aspect" android:value="2.1" />
+        <meta-data
+            android:name="android.max_aspect"
+            android:value="2.1" />
 
         <activity
-            android:name="com.dominionos.music.ui.activity.MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="sensorPortrait"
             android:theme="@style/AppTheme.BrandedLaunch">
@@ -37,27 +39,28 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.dominionos.music.ui.activity.AlbumActivity"
+            android:name=".ui.activity.AlbumActivity"
             android:screenOrientation="sensorPortrait"
             android:theme="@style/AppTheme.Light" />
         <activity
-            android:name="com.dominionos.music.ui.activity.PlaylistActivity"
+            android:name=".ui.activity.PlaylistActivity"
             android:screenOrientation="sensorPortrait"
             android:theme="@style/AppTheme.Light" />
         <activity
-            android:name="com.dominionos.music.ui.activity.ArtistActivity"
+            android:name=".ui.activity.ArtistActivity"
             android:screenOrientation="sensorPortrait"
             android:theme="@style/AppTheme.Light" />
 
         <service
-            android:name="com.dominionos.music.service.MusicService"
+            android:name=".service.MusicService"
             android:enabled="true" />
 
         <activity
-            android:name="com.dominionos.music.ui.activity.SettingsActivity"
-            android:screenOrientation="sensorPortrait"
+            android:name=".ui.activity.SettingsActivity"
             android:label="@string/settings"
-            android:theme="@style/AppTheme.Light"/>
+            android:screenOrientation="sensorPortrait"
+            android:theme="@style/AppTheme.Light" />
+        <activity android:name=".ui.activity.AboutActivity"></activity>
     </application>
 
 </manifest>
