--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     compile 'com.android.support:percent:25.3.1'
     compile 'com.android.support:preference-v7:25.3.1'
     compile 'com.android.support:preference-v14:25.3.1'
+    compile 'com.google.android.gms:play-services-base:10.2.1'
+    compile 'com.android.support:customtabs:25.3.1'
     compile 'com.afollestad:async:0.2.3'
     compile 'com.simplecityapps:recyclerview-fastscroll:1.0.14'
     compile 'com.mikepenz:material-design-iconic-typeface:2.2.0.2@aar'
