--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.AlbumActivity"
+            android:name=".ui.activity.AlbumDetailActivity"
             android:screenOrientation="sensorPortrait"
             android:theme="@style/AppTheme.Light" />
         <activity
@@ -49,7 +49,7 @@
             android:screenOrientation="sensorPortrait"
             android:theme="@style/AppTheme.Light" />
         <activity
-            android:name=".ui.activity.ArtistActivity"
+            android:name=".ui.activity.ArtistDetailActivity"
             android:screenOrientation="sensorPortrait"
             android:theme="@style/AppTheme.Light" />
 
