--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '25.0.2'
 
     defaultConfig {
-        applicationId "com.dominionos.music"
+        applicationId "com.mnml.music"
         minSdkVersion 24
         targetSdkVersion 25
         versionCode 25
